--- a/backend/package.json
+++ b/backend/package.json
@@ -14,20 +14,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "@supabase/supabase-js": "^2.58.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "chalk": "^5.6.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "nodemailer": "^7.0.7",
     "rate-limiter-flexible": "^8.0.1",
     "resend": "^6.1.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   },
   "engines": {
     "node": ">=18.0.0"
