--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.7",
     "rate-limiter-flexible": "^8.0.1",
     "resend": "^6.1.2"
